--- a/main.html
+++ b/main.html
@@ -8,6 +8,18 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<button class="open-modal-btn">Open Modal</button>
+	<div class="modal-overlay" id="modalOverlay">
+		<div class="modal">
+			<div class="modal-header">
+				<h2>Modal Title</h2>
+				<button class="close-btn" id="closeBtn">&times;</button>
+			</div>
+			<div class="modal-body">
+				<p>This is the content inside the modal body.</p>
+			</div>
+		</div>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
