--- a/main.html
+++ b/main.html
@@ -1,28 +1,27 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Modal Example</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-	<button class="open-modal-btn">Open Modal</button>
-	<div class="modal-overlay" id="modalOverlay">
-		<div class="modal">
-			<div class="modal-header">
-				<h2>Modal Title</h2>
-				<button class="close-btn" id="closeBtn">&times;</button>
-			</div>
-			<div class="modal-body">
-				<p>This is the content inside the modal body.</p>
-			</div>
-		</div>
-	</div>
-    <script type="text/javascript" src="./script.js">
-</script>
 
+  <button id="openModal">Open Modal</button>
+
+  <div class="modal-overlay" id="modalOverlay">
+    <div class="modal">
+      <div class="modal-header">
+        <h2>Modal Header</h2>
+        <button class="close-modal">&times;</button>
+      </div>
+      <div class="modal-body">
+        <p>Modal Body Content</p>
+      </div>
+    </div>
+  </div>
+
+  <script src="script.js"></script>
 </body>
-
 </html>
